# mcmcsampler

./: CMakeLists.txt  README.md
include/mcmcsampler/: am.hpp  dr.hpp  dram.hpp  mh.hpp
src/: CMakeLists.txt  dr.cpp  dram.cpp  gaussian_proposal.hpp
test/: CMakeLists.txt  am_test.cpp  dr_test.cpp  dram_test.cpp  mh_test.cpp  plots.py  plots.tex
